# ximd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  main.cpp
inc/: debug.hpp  ximd_ascii.hpp
src/: CMakeLists.txt  ximd_ascii.cpp
tests/: CMakeLists.txt  main.cpp
